work on columns

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <span id="c">
                                 <a href="#"  class="active" id="centigradeLink">°C</a></span>
                                 <span id="bar"> | </span>
-                            <span id="f"><a href="#" class="notActive" id="fahrenheitLink">°F</a></span>
+                            <span id="f"><a href="#" id="fahrenheitLink">°F</a></span>
                             </span>
                         </h2>
                         <span id="icon" class="big-icon"><i class="fa-solid fa-rainbow"></i>
