Finished prediction columns

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="headline1">
                 <p>ANTIPODE WEATHER SERVICE</p>
                 <p class="medium">Try entering 'Macao' in the city search box.</p>
-                <p class="medium">Also try: Madrid, Guayaquil, or Honolulu.</p>
+                <p class="medium">Also try: Madrid, Quito, or Honolulu.</p>
             </div>
         </div>
         <div class="row" id="search-area">
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="row align-items-center">
-            <div class="col" id="left">
+            <div class="col-md-5" id="left">
                 <div class="upsidedown">
                     <div id="upsidedown-info">
                         <!-- city name, temp, and weather icon -->
@@ -69,13 +69,13 @@
                     </div>
                 </div>
             </div>
-            <div class="col" id="middle">
-                <span id="circlearrows">
+            <div class="col-md-2 col-md-offset-2" id="middle">
+                <span id="circlearrows" >
                     <img src="images/circlearrows.svg" 
                     alt="icon shows cities are antipodes"/>
                 </span>
             </div>
-            <div class="col" id="right">
+            <div class="col-md-5" id="right">
                 <div class="row" id="result-area">
                     <div class="row" id="name-temp">
                         <!-- city name, temp, and weather icon -->
@@ -105,9 +105,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6"></div>
-            <div class="col-6">
-            <div class="row" id="last-five-days"></div>
+            <div class="col-7"></div>
+            <div class="col-5" id="last-five-days">
             </div>
         </div>
         <div class="row smaller">
