Finished antipodal units change

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="headline1">
                 <p>ANTIPODE WEATHER SERVICE</p>
-                <p class="medium">Try entering 'Macao' in the city search box.</p>
+                <p class="medium">Try entering 'Taipei' in the city search box.</p>
                 <p class="medium">Also try: Madrid, Quito, or Honolulu.</p>
             </div>
         </div>
@@ -88,6 +88,7 @@
                             <span id="f"><a href="#" id="fahrenheitLink">°F</a></span>
                             </span>
                         </h2>
+                        <p id="day-time"></p>
                     </div>
                 </div>
                 <div class="row prediction-description-area">
@@ -96,7 +97,7 @@
                     <div class="col">
                         <div class="row weather-row">
                             <div>
-                                <p id="day-time"></p>
+                                
                                 <p id="description" style="text-transform: capitalize;"></p>
                                 <p id="humidity"></p>
                                 <p id="wind"></p>
