changed tag line

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="headline1">
                 <p>ANTIPODE WEATHER SERVICE</p>
                 <p class="medium">Try entering 'Taipei' in the city search box.</p>
-                <p class="medium">Also try: Madrid, Quito, or Honolulu.</p>
+                <p class="medium">Also try: Madrid, Perth, or Honolulu.</p>
             </div>
         </div>
         <div class="row" id="search-area">
@@ -97,7 +97,6 @@
                     <div class="col">
                         <div class="row weather-row">
                             <div>
-                                
                                 <p id="description" style="text-transform: capitalize;"></p>
                                 <p id="humidity"></p>
                                 <p id="wind"></p>
