hacky better on mobile

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             </div>
                             <div>
                                 <input class="form insidebox" id="locationbar" type="text" 
-                                placeholder="See your location's weather" disabled/>
+                                placeholder="See local weather" disabled/>
                                 <button class="button" id="locationbutton"  
                                 aria-label="click to search">•</button>
                             </div>
@@ -111,7 +111,7 @@
         </div>
         <div class="row smaller">
             <p>Coded by <a href="https://www.linkedin.com/in/isabel-klint/">Isabel Klint.</a></p>
-            <p><a href="https://isabelklint.github.io/ANTIPODE-WEATHER-SERVICE/">Open-sourced on GitHub</a> and <a href="https://sunny-fudge-a596ac.netlify.app">hosted on Netlify.</a></p>
+            <p><a href="https://isabelklint.github.io/ANTIPODE-WEATHER-SERVICE/">Open-sourced on GitHub</a><p>and <a href="https://sunny-fudge-a596ac.netlify.app">hosted on Netlify.</a></p></p>
         </div>
         <script src="src/index.js"></script>
     </div>
