--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="row">
             <div class="headline1">
                 <p>ANTIPODE WEATHER SERVICE</p>
-                <p class="medium">Try entering 'Taipei' in the city search box.</p>
-                <p class="medium">Also try: Madrid, Perth, or Honolulu.</p>
+                <p class="medium">Try searching for:</p>
+                <p class="medium">Taipei, Madrid, Perth, or Honolulu.</p>
             </div>
         </div>
         <div class="row" id="search-area">
