--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>Antipode Weather Service</title>
+    <title>Antipode Weather</title>
         <!-- FONT AWESOME   -->
         <script src="https://kit.fontawesome.com/6a50e3be5d.js" crossorigin="anonymous"></script>
     <!-- GOOGLE FONTS NEEDED MAYBE  -->
@@ -24,9 +24,9 @@
     <div class="container">
         <div class="row">
             <div class="headline1">
-                <p>ANTIPODE WEATHER SERVICE</p>
-                <p class="medium">Try entering 'Taipei' in the city search box.</p>
-                <p class="medium">Also try: Madrid, Perth, or Honolulu.</p>
+                <p>ANTIPODE WEATHER</p>
+                <p class="medium">Try searching for:</p>
+                <p class="medium">Taipei, Madrid, Perth, or Honolulu.</p>
             </div>
         </div>
         <div class="row" id="search-area">
@@ -34,7 +34,6 @@
             <div class="col">
                 <div class="box">
                     <div class="headline2">Find the weather in...</div>
-                    <!-- start -->
                         <form>
                             <div>
                                 <input class="city_search_area insidebox" id="searchbar" type="text" 
@@ -44,7 +43,7 @@
                             </div>
                             <div>
                                 <input class="form insidebox" id="locationbar" type="text" 
-                                placeholder="See your location's weather" disabled/>
+                                placeholder="See local weather" disabled/>
                                 <button class="button" id="locationbutton"  
                                 aria-label="click to search">•</button>
                             </div>
@@ -52,66 +51,66 @@
                 </div>
             </div>
         </div>
-        <div class="row align-items-center">
-            <div class="col-md-5" id="left">
-                <div class="upsidedown">
-                    <div id="upsidedown-info">
-                        <!-- city name, temp, and weather icon -->
-                        <h2  class="big" id="upsidedown-city-name">Antipode</h2>
-                        <h2 class="big">
-                            <span id="upsidedown-temp"></span>
-                            <span id="units"></span>
-                        </h2>
-                    </div>
-                    <div class="icon-area">
-                        <span id="upsidedown-icon" class="big-icon"><i class="fa-solid fa-rainbow"></i>
-                        </span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-2 col-md-offset-2" id="middle">
-                <span id="circlearrows" >
-                    <img src="images/circlearrows.svg" 
-                    alt="icon shows cities are antipodes"/>
-                </span>
-            </div>
-            <div class="col-md-5" id="right">
-                <div class="row" id="result-area">
-                    <div class="row" id="name-temp">
-                        <!-- city name, temp, and weather icon -->
-                        <h2  class="big" id="city-name">Antipode</h2>
-                        <h2 class="big">
-                            <span id="temp"></span>
-                            <span id="c">
-                                <a href="#"  class="active" id="centigradeLink">°C</a></span>
-                                <span id="bar"> | </span>
-                            <span id="f"><a href="#" id="fahrenheitLink">°F</a></span>
+            <div class="row align-items-center">
+                <div id="left">
+                    <div class="upsidedown">
+                        <div id="upsidedown-info">
+                            <!-- city name, temp, and weather icon -->
+                            <h2  class="big" id="upsidedown-city-name">Antipode</h2>
+                            <h2 class="big">
+                                <span id="upsidedown-temp"></span>
+                                <span id="units"></span>
+                            </h2>
+                        </div>
+                        <div class="icon-area">
+                            <span id="upsidedown-icon" class="big-icon"><i class="fa-solid fa-rainbow"></i>
                             </span>
-                        </h2>
-                        <p id="day-time"></p>
+                        </div>
                     </div>
                 </div>
-                <div class="row prediction-description-area">
-                    <div class="col"><span id="icon" class="big-icon"><i class="fa-solid fa-rainbow"></i>
-                    </span></div>
-                    <div class="col">
-                        <div class="row weather-row">
-                            <div>
-                                <p id="description" style="text-transform: capitalize;"></p>
-                                <p id="humidity"></p>
-                                <p id="wind"></p>
+                <div id="middle">
+                    <span id="circlearrows" >
+                        <img src="images/circlearrows.svg" 
+                        alt="icon shows cities are antipodes"/>
+                    </span>
+                </div>
+                <div id="right">
+                    <div class="row" id="result-area">
+                        <div class="row" id="name-temp">
+                            <!-- city name, temp, and weather icon -->
+                            <h2  class="big" id="city-name">Antipode</h2>
+                            <h2 class="big">
+                                <span id="temp"></span>
+                                <span id="c">
+                                    <a href="#"  class="active" id="centigradeLink">°C</a></span>
+                                    <span id="bar"> | </span>
+                                <span id="f"><a href="#" id="fahrenheitLink">°F</a></span>
+                                </span>
+                            </h2>
+                            <p id="day-time"></p>
+                        </div>
+                    </div>
+                    <div class="row prediction-description-area">
+                        <div class="col"><span id="icon" class="big-icon"><i class="fa-solid fa-rainbow"></i>
+                        </span></div>
+                        <div class="col">
+                            <div class="row weather-row">
+                                <div>
+                                    <p id="description" style="text-transform: capitalize;"></p>
+                                    <p id="humidity"></p>
+                                    <p id="wind"></p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="col-7"></div>
+                <div class="col-5" id="last-five-days">
+                </div>
             </div>
-            <div class="col-7"></div>
-            <div class="col-5" id="last-five-days">
-            </div>
-        </div>
         <div class="row smaller">
             <p>Coded by <a href="https://www.linkedin.com/in/isabel-klint/">Isabel Klint.</a></p>
-            <p><a href="https://isabelklint.github.io/ANTIPODE-WEATHER-SERVICE/">Open-sourced on GitHub</a> and <a href="https://sunny-fudge-a596ac.netlify.app">hosted on Netlify.</a></p>
+            <p><a href="https://isabelklint.github.io/ANTIPODE-WEATHER-SERVICE/">Open-sourced on GitHub</a><p>and <a href="https://sunny-fudge-a596ac.netlify.app">hosted on Netlify.</a></p></p>
         </div>
         <script src="src/index.js"></script>
     </div>
